Add JVM appendices: TLAB pattern, classloader lifecycle, native memory, request flow
Four chapter appendices that ground each chapter's concepts in
senior-ops perspective. All organized as collapsible toggles.

- 01-heap-and-tlab.md: pattern-insight appendix mapping TLAB's
  "split-then-bump" idea onto InnoDB partition, RMQ routing key,
  LongAdder, OS per-CPU counters (mechanical sympathy framing) plus
  TLAB anti-patterns and diagnostic signals

- 04-initialization-and-unload.md: class lifecycle summary appendix
  covering Loading + Parent Delegation, Linking three steps, lazy
  Initialization with "active use" triggers, Unload conditions and
  scenarios (Tomcat hot reload), and ClassLoader leak patterns
  (ThreadLocal / JDBC / JNI / shutdown hook / static cache / logger)

- 02-runtime-data-areas/README.md: request-flow appendix that walks the
  Build -> Startup -> Request -> GC timeline across Heap / Metaspace /
  Stack / Code Cache, including a per-request memory footprint for a
  Spring controller path, common phrasing pitfalls, and a whiteboard
  master diagram

- 02-metaspace-and-class-space.md: native memory + mmap appendix
  (reserved vs committed, VSZ/RSS mapping) and a precise correction of
  "is Metaspace a GC target" - clarifying that class unloading runs as
  a sub-phase of the same GC cycle (not a separate mechanism), and
  comparing class-unloading timing across Serial / G1 / CMS / ZGC /
  Shenandoah

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>